# qt-learning

./: QtAndroid_9789863793083.md  README.md
VisionForm/: CMakeLists.txt  qtDepends.txt
VisionForm/Canvas/: CMakeLists.txt  canvas.cpp  canvas.h  canvasplugin.cpp  canvasplugin.h
VisionForm/HalconAlgorithm/: concreteShape.cpp  halconalgorithm.cpp  halconalgorithm.h  halconalgorithm_global.h  metrology.cpp  metrology.h
VisionForm/MySource/: CMakeLists.txt  ResourceManager.cpp  ResourceManager.h  mysource.cpp  mysource.h  mysource_global.h
VisionForm/PopWidgets/: CMakeLists.txt  CalibrationForm.ui  CaptureForm.ui  ComputeToolForm.ui  DialogButtonRight.ui  ResultPreviewForm.ui  ToolForm.ui  flowwidget.cpp  flowwidget.h  generictools.h  popwidgets.cpp  popwidgets.h  popwidgets_global.h  resource.h  resultpreview.cpp
VisionForm/Shape/: CMakeLists.txt  shape.cpp  shape.h  shape_global.h
VisionForm/TestForm/: Form1.Designer.cs  Form1.cs  Program.cs
VisionForm/VFdotnet/: Vision.cs
VisionForm/VisionConsole/: main.cpp
VisionForm/VisionForm/: CMakeLists.txt  main.cpp  visionform.cpp  visionform.h  visionform.qrc  visionform.ui
VisionForm/opencv/: OpenCVConfig.cmake
VisionForm/opencv/x64/vc14/lib/: opencv_img_hash400.lib  opencv_world400.lib
